restserver conectado a mongodb

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-PORT=8080
+PORT=8083
+
+MONGODB_CNN=mongodb+srv://user_node_cafe2:8XLCwkOB8LUusqGD@cafe.hs4saiz.mongodb.net/cafe2
+
+USER=user_node_cafe2
+PASS=8XLCwkOB8LUusqGD
