--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.18.2",
+    "express-validator": "^6.9.2",
     "mongoose": "^6.8.1"
   }
 }
